syntax = "proto3";

package dem1;

option go_package = ".;pb";
option java_package = "com.gitlab.techschool.pcbook.pb";
option java_multiple_files = true;

import "proto/laptop_message.proto";
import "proto/filter_message.proto";

message CreateLaptopRequest { Laptop laptop = 1; }

message CreateLaptopResponse { string id = 1; }

message SearchLaptopRequest { Filter filter = 1; }

message SearchLaptopResponse {Laptop laptop = 1;}

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};

  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {

  };
}